[package]
name = "vigilant_lamp"
version = "0.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Multi-target game engine / graphics library"
homepage = "https://github.com/Aandreba/vigilant-lamp"
repository = "https://github.com/Aandreba/vigilant-lamp"
readme = "README.md"
keywords = ["game", "gamedev", "engine", "graphics"]
categories = ["game-development", "game-engines", "graphics", "rendering", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
ndarray = "0.15.3"
array-macro = "2.1.0"
bytemuck = "1.7.2"
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] } 
js-sys = "0.3.55"
yew = "0.19.3"
game-loop = "0.8.0"
derive_more = "0.99.17"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gl33 = "0.2.1"
glutin = "0.28.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'WebGlTexture',
  'ImageData',
  'Window'
]